--- a/TFG_notebook.ipynb
+++ b/TFG_notebook.ipynb
@@ -11692,11 +11692,11 @@
     "            \n",
     "            # Add the expected value to the list\n",
     "            expect_values.append(expect_value)\n",
-    "            print(\"jodido\")\n",
+    "            print(\"one more\")\n",
     "\n",
     "        # Compute the standard deviation of the expected values and store it\n",
     "        std_devs[n_shots] = np.std(expect_values)\n",
-    "        print(\"he hecho\", n_simulations, \"simulaciones\")\n",
+    "        print(\"Done\", n_simulations, \"simulations for\", n_shots, \"shots\")\n",
     "\n",
     "    return std_devs\n",
     "\n",
